# makas

./: .gitignore  Link to flameshot  README.md  check_dep.js  com.github.Murat-Karakaya.Makas.json  com.github.murat.karakaya.Makas.json  dev_runner.js  main.js  meson.build  org.example.ScreenRecorder.json  org.x.Makas.json  recorder.js  run.sh  screenshot.js
data/: com.github.Murat-Karakaya.Makas.desktop.in  com.github.Murat-Karakaya.Makas.gschema.xml  com.github.Murat-Karakaya.Makas.metainfo.xml.in  com.github.Murat-Karakaya.Makas.service.in  com.github.murat.karakaya.Makas.desktop.in  com.github.murat.karakaya.Makas.gschema.xml  com.github.murat.karakaya.Makas.metainfo.xml.in  com.github.murat.karakaya.Makas.service.in  gschemas.compiled  meson.build  org.example.ScreenRecorder.desktop.in  org.example.ScreenRecorder.gschema.xml  org.example.ScreenRecorder.metainfo.xml.in  org.example.ScreenRecorder.service.in  org.x.Makas.desktop.in  org.x.Makas.gschema.xml  org.x.Makas.metainfo.xml.in  org.x.Makas.service.in
data/icons/: meson.build
data/ui/: prescreenshot.ui
lib/: makas-grim.c  makas-grim.h  makas-screenshot-shell.c  makas-screenshot-shell.h  makas-screenshot.c  makas-screenshot.h  makas-utils.c  makas-utils.h  meson.build
po/: POTFILES.in  meson.build
scripts/: build-deb.sh
src/: cli.js  com.github.Murat-Karakaya.Makas.data.gresource.xml  com.github.murat.karakaya.Makas.data.gresource.xml  com.github.murat.karakaya.Makas.in  com.github.murat.karakaya.Makas.src.gresource.xml  data.gresource  main.js  meson.build  org.example.ScreenRecorder.data.gresource.xml  org.example.ScreenRecorder.src.gresource.xml  org.x.Makas.data.gresource.xml  org.x.Makas.src.gresource.xml  parseCli.js  preferences.js  preferneces.ui  recorder.js  screenshot.js  src.gresource  utils.js  window.js  window.ui
src/recorder/: recorder.js
src/screenshot/: area-selection.js  constants.js  helpers.js  performCapture.js  postscreenshot.js  prescreenshot.js  screenshot.js  utils.js
src/screenshot/areaSelectionMethods/: selectArea.js  selectAreaLayerShell.js  selectAreaX11.js  selectAreaXWayland.js  selectionDrawer.js  xwayland-helper.js
src/screenshot/captureMethods/: captureGrim.js  capturePortal.js  captureShell.js  captureX11.js  performCapture.js
src/screenshot/popupWindows/: area-selection.js  flash.js  selectWindow.js
src/screenshot/postscreenshot/: postscreenshot.js  postscreenshot.ui
src/screenshot/prescreenshot/: prescreenshot.js  prescreenshot.ui
